--- a/app/views/test_engine2/test/index.html.erb
+++ b/app/views/test_engine2/test/index.html.erb
@@ -1,3 +1,3 @@
-You to to me! A link to myself is: <br /><br />
+You got to me! A link to myself is according to <b>test_engine2.test_path</b> is: <br /><br />
 
 <%= link_to test_engine2.test_path, test_engine2.test_path %>
